--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaixaVerso - Cadastro e Login</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <div class="container">
@@ -21,7 +22,7 @@
                     <input type="email" id="email-input" placeholder="seu@email.com" required>
                     <span class="error-message" id="email-error"></span>
                 </div>
-                <button id="advance-btn" class="btn-primary">Avançar</button>
+                <button type="button" id="advance-btn" class="btn-primary">Avançar</button>
             </div>
         </section>
 
@@ -31,17 +32,19 @@
                 <h1>CaixaVerso</h1>
                 <p>Login</p>
             </div>
-            <div class="form-container">
+            <form class="form-container">
                 <h2>Digite sua senha</h2>
                 <p id="login-email-display"></p>
+                <!-- Campo username oculto para acessibilidade -->
+                <input type="email" id="login-username" autocomplete="username" aria-hidden="true" class="sr-only">
                 <div class="input-group">
                     <label for="password-input">Senha</label>
-                    <input type="password" id="password-input" placeholder="Digite sua senha" required>
+                    <input type="password" id="password-input" placeholder="Digite sua senha" autocomplete="current-password" required>
                     <span class="error-message" id="password-error"></span>
                 </div>
-                <button id="login-btn" class="btn-primary">Entrar</button>
-                <button id="back-to-email-btn" class="btn-secondary">Voltar</button>
-            </div>
+                <button type="submit" id="login-btn" class="btn-primary">Entrar</button>
+                <button type="button" id="back-to-email-btn" class="btn-secondary">Voltar</button>
+            </form>
         </section>
 
         <!-- Formulário de Cadastro -->
@@ -55,7 +58,7 @@
                 <form id="register-form">
                     <div class="input-group">
                         <label for="register-email">E-mail</label>
-                        <input type="email" id="register-email" readonly>
+                        <input type="email" id="register-email" autocomplete="username" readonly>
                     </div>
                     <div class="input-group">
                         <label for="register-name">Nome Completo</label>
@@ -79,12 +82,12 @@
                     </div>
                     <div class="input-group">
                         <label for="register-password">Senha</label>
-                        <input type="password" id="register-password" placeholder="Mínimo 8 caracteres" required>
+                        <input type="password" id="register-password" placeholder="Mínimo 8 caracteres" autocomplete="new-password" required>
                         <span class="error-message" id="register-password-error"></span>
                     </div>
                     <div class="input-group">
                         <label for="register-confirm-password">Confirmar Senha</label>
-                        <input type="password" id="register-confirm-password" placeholder="Digite a senha novamente" required>
+                        <input type="password" id="register-confirm-password" placeholder="Digite a senha novamente" autocomplete="new-password" required>
                         <span class="error-message" id="confirm-password-error"></span>
                     </div>
                     <button type="submit" class="btn-primary">Cadastrar</button>
@@ -124,8 +127,8 @@
                     </div>
                 </div>
                 <div class="profile-actions">
-                    <button id="edit-profile-btn" class="btn-primary">Editar Dados</button>
-                    <button id="logout-btn" class="btn-secondary">Sair</button>
+                    <button type="button" id="edit-profile-btn" class="btn-primary">Editar Dados</button>
+                    <button type="button" id="logout-btn" class="btn-secondary">Sair</button>
                 </div>
             </div>
         </section>
@@ -139,6 +142,8 @@
             <div class="form-container">
                 <h2>Editar seus dados</h2>
                 <form id="edit-profile-form">
+                    <!-- Campo username oculto para acessibilidade -->
+                    <input type="email" id="edit-username" autocomplete="username" aria-hidden="true" class="sr-only">
                     <div class="input-group">
                         <label for="edit-name">Nome Completo</label>
                         <input type="text" id="edit-name" required>
@@ -151,12 +156,12 @@
                     </div>
                     <div class="input-group">
                         <label for="edit-address">Endereço</label>
-                        <input type="text" id="edit-address" required>
+                        <input type="text" id="edit-address" autocomplete="address-level1" required>
                         <span class="error-message" id="edit-address-error"></span>
                     </div>
                     <div class="input-group">
                         <label for="edit-password">Nova Senha (opcional)</label>
-                        <input type="password" id="edit-password" placeholder="Deixe em branco para manter">
+                        <input type="password" id="edit-password" placeholder="Deixe em branco para manter" autocomplete="current-password">
                         <span class="error-message" id="edit-password-error"></span>
                     </div>
                     <button type="submit" class="btn-primary">Salvar Alterações</button>
