--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>Digite seu e-mail</h2>
                 <div class="input-group">
                     <label for="email-input">E-mail</label>
-                    <input type="email" id="email-input" placeholder="seu@email.com" required>
+                    <input type="email" id="email-input" placeholder="seu@email.com" class="lowercase" required>
                     <span class="error-message" id="email-error"></span>
                 </div>
                 <button type="button" id="advance-btn" class="btn-primary">Avançar</button>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="input-group">
                         <label for="register-name">Nome Completo</label>
-                        <input type="text" id="register-name" placeholder="Seu nome completo" required>
+                        <input type="text" id="register-name" placeholder="Seu nome completo" class="uppercase" required>
                         <span class="error-message" id="name-error"></span>
                     </div>
                     <div class="input-group">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="input-group">
                         <label for="register-address">Endereço</label>
-                        <input type="text" id="register-address" placeholder="Seu endereço completo" required>
+                        <input type="text" id="register-address" placeholder="Seu endereço completo" class="uppercase" required>
                         <span class="error-message" id="address-error"></span>
                     </div>
                     <div class="input-group">
@@ -146,7 +146,7 @@
                     <input type="email" id="edit-username" autocomplete="username" aria-hidden="true" class="sr-only">
                     <div class="input-group">
                         <label for="edit-name">Nome Completo</label>
-                        <input type="text" id="edit-name" required>
+                        <input type="text" id="edit-name" class="uppercase" required>
                         <span class="error-message" id="edit-name-error"></span>
                     </div>
                     <div class="input-group">
@@ -156,7 +156,7 @@
                     </div>
                     <div class="input-group">
                         <label for="edit-address">Endereço</label>
-                        <input type="text" id="edit-address" autocomplete="address-level1" required>
+                        <input type="text" id="edit-address" autocomplete="address-level1" class="uppercase" required>
                         <span class="error-message" id="edit-address-error"></span>
                     </div>
                     <div class="input-group">
